<resources>
    <string name="app_name">GymTracker</string>
    <string name="helloWorld">Hello World</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="btnCrearCuenta">Crear cuenta</string>
    <string name="strUsuario">Introduce tu usuario</string>
    <string name="strContrasena">Introduce tu contraseña</string>
    <string name="strEstableceCorreo">Establece tu correo:</string>
    <string name="strEstableceContrasena">Establece tu contraseña:</string>
    <string name="strConfirmar">Confirmar</string>
    <string name="title_activity_crear_cuenta">crearCuentaActivity</string>
    <string name="strNoTienesCuenta">Aun no tienes una cuenta?\nCrea una pulsando aquí</string>
    <string name="strEligeAno">Selecciona un año:</string>
    <string name="strEligeGrupo">Selecciona un grupo muscular:</string>
    <string name="strEligeEjercicio">Selecciona un ejercicio:</string>
    <string name="strEligeMes">Selecciona un mes:</string>
    <string name="strInsertaPeso">Inserta el peso (kg)</string>
    <string-array name="spMeses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="spAnos">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
    </string-array>
    <string-array name="spGrupos">
        <item></item>
        <item>Brazo</item>
        <item>Pierna</item>
        <item>Torso</item>
        <item>Cardio</item>
        <item>Abdomen</item>
        <item>Espalda</item>
    </string-array>
    <string-array name="spGruposInsertar">
        <item>BRAZO</item>
        <item>PIERNA</item>
        <item>TORSO</item>
        <item>CARDIO</item>
        <item>ABDOMEN</item>
        <item>ESPALDA</item>
    </string-array>
    <string-array name="emptyArray">
        <item></item>
    </string-array>
    <string name="eleccion">Selecciona lo que quieres hacer:</string>
    <string name="strConsultarDatos">Consultar datos</string>
    <string name="strInsertarDatos">Insertar datos</string>
    <string-array name="slEjsPierna">
        <item>ADUCTOR</item>
        <item>ABDUCTOR</item>
        <item>EXTENSION CUADRICEPS</item>
        <item>FLEXION FEMORAL SENTADO</item>
        <item>FLEXION FEMORAL TUMBADO</item>
        <item>SENTADILLA</item>
        <item>SENTADILLA BULGARA</item>
        <item>SENTADILLA HACK</item>
        <item>GEMELO</item>
        <item>PRENSA</item>
    </string-array>
    <string-array name="slEjsCardio">
        <item>CINTA</item>
        <item>BICI</item>
        <item>ELIPTICA</item>
    </string-array>
    <string-array name="slEjsBrazo">
        <item>CURL EN POLEA</item>
        <item>CURL MARTILLO</item>
        <item>BARRA Z</item>
        <item>CURL EN BANCO INCLINADO</item>
        <item>FONDOS DE TRICEPS</item>
        <item>ELEVACION TRAS NUCA CON MANCUERNAS</item>
        <item>EXTENSION TRAS NUCA EN POLEA</item>
        <item>EXTENSION BAJA EN POLEA</item>
        <item>ELEVACION TRAS NUCA EN POLEA</item>
    </string-array>
    <string-array name="slEjsTorso">
        <item>PRESS BANCO PLANO</item>
        <item>PRESS BANCO INCLINADO</item>
        <item>PRESS BANCO INCLINADO CON MANCUERNAS</item>
        <item>PRESS EN MAQUINA</item>
        <item>PRESS MILITAR MANCUERNAS</item>
        <item>PRESS MILITAR BARRA</item>
        <item>PRESS ARNOLD</item>
        <item>POLEA ASCENDENTE</item>
        <item>POLEA NEUTRA</item>
        <item>POLEA DESCENDENTE</item>
        <item>MARIPOSA</item>
        <item>ELEVACIONES FRONTALES</item>
        <item>ELEVACIONES LATERALES POLEA</item>
        <item>ELEVACIONES LATERALES MANCUERNA</item>
        <item>ELEVACIONES POSTERIORES</item>
        <item>ENCOGIMIENTO DE TRAPECIO</item>
    </string-array>
    <string-array name="slEjsEspalda">
        <item>FACE PULL</item>
        <item>REMO GIRONDA</item>
        <item>REMO MAQUINA</item>
        <item>REMO MANCUERNAS</item>
        <item>REMO BARRA</item>
        <item>REMO BARRA T</item>
        <item>JALON POLEA</item>
        <item>JALON MAQUINA</item>
    </string-array>
    <string-array name="slEjsAbdomen">
        <item>CRUNCH</item>
        <item>CRUNCH PIERNAS FLEXIONADAS</item>
        <item>ELEVACION DE PIERNAS</item>
        <item>PLANCHA</item>
    </string-array>
    <string name="strAno">Año: </string>
    <string name="strMes">Mes: </string>
    <string name="strEjercicio">Ejercicio: </string>
    <string name="strTituloConsulta">Resultados de la búsqueda: </string>
    <string name="strPeso">Peso: </string>
    <string name="strMinutos">Minutos: </string>
    <string name="strEsperandoSeleccionGrupo">Esperando grupo muscular...</string>
    <string name="strInserteMinutos">Inserte los minutos:</string>
</resources>