<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/grisOscuro"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CrearCuentaActivity"
    >
    <androidx.cardview.widget.CardView
        android:backgroundTint="@color/grisClaro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAnoInsertar"
                android:text="@string/strEligeAno"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/spAnosInsertar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/negro"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spAnosInsertar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAnoInsertar"
                app:layout_constraintBottom_toTopOf="@id/tvMesInsertar"
                android:entries="@array/spAnos"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMesInsertar"
                android:textColor="@color/negro"
                android:text="@string/strEligeMes"
                app:layout_constraintTop_toBottomOf="@id/spAnosInsertar"
                app:layout_constraintBottom_toTopOf="@+id/spMesesInsertar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spMesesInsertar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMesInsertar"
                app:layout_constraintBottom_toTopOf="@id/tvGrupoInsertar"
                android:entries="@array/spMeses"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGrupoInsertar"
                android:textColor="@color/negro"
                android:text="@string/strEligeGrupo"
                app:layout_constraintTop_toBottomOf="@+id/spMesesInsertar"
                app:layout_constraintBottom_toTopOf="@+id/spGruposInsertar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spGruposInsertar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGrupoInsertar"
                app:layout_constraintBottom_toTopOf="@id/tvInsertarPeso"
                android:entries="@array/spGrupos"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/strInsertaPeso"
                android:id="@+id/tvInsertarPeso"
                app:layout_constraintTop_toBottomOf="@id/spGruposInsertar"
                app:layout_constraintBottom_toTopOf="@id/tilInsertarPeso"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvInsertarPeso"
                app:layout_constraintBottom_toTopOf="@+id/btnConfirmarAccionInsertar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="Correo"
                android:id="@+id/tilInsertarPeso"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCorreoCrearCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="15"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnConfirmarAccionInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/amarillo"
                android:onClick="insertarDatos"
                android:text="@string/strConfirmar"
                android:textColor="@color/negro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilInsertarPeso" />







        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>