<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/grisOscuro"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CrearCuentaActivity"
    >
    <androidx.cardview.widget.CardView
        android:backgroundTint="@color/grisClaro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAnoConsultar"
                android:text="@string/strEligeAno"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/spAnosConsultar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/negro"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spAnosConsultar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAnoConsultar"
                app:layout_constraintBottom_toTopOf="@id/tvMesConsultar"
                android:entries="@array/spAnos"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMesConsultar"
                android:textColor="@color/negro"
                android:text="@string/strEligeMes"
                app:layout_constraintTop_toBottomOf="@id/spAnosConsultar"
                app:layout_constraintBottom_toTopOf="@+id/spMesesConsultar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spMesesConsultar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMesConsultar"
                app:layout_constraintBottom_toTopOf="@id/tvGrupoConsultar"
                android:entries="@array/spMeses"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGrupoConsultar"
                android:textColor="@color/negro"
                android:text="@string/strEligeGrupo"
                app:layout_constraintTop_toBottomOf="@+id/spMesesConsultar"
                app:layout_constraintBottom_toTopOf="@+id/spGruposConsultar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spGruposConsultar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGrupoConsultar"
                app:layout_constraintBottom_toTopOf="@id/btnConfirmarAccionConsultar"
                android:entries="@array/spGrupos"
                />


            <Button
                android:id="@+id/btnConfirmarAccionConsultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/amarillo"
                android:onClick="ConsultarDatos"
                android:text="@string/strConfirmar"
                android:textColor="@color/negro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spGruposConsultar" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>