<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/moradoOscuro"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CrearCuentaActivity"
    >
    <androidx.cardview.widget.CardView
        android:backgroundTint="@color/moradoClaro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAno"
                android:text="@string/strEstableceCorreo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/spAnos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/negro"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spAnos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAno"
                app:layout_constraintBottom_toTopOf="@id/tvMes"
                android:entries="@array/spAnos"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMes"
                android:textColor="@color/negro"
                android:text="@string/strEstableceCorreo"
                app:layout_constraintTop_toBottomOf="@id/spAnos"
                app:layout_constraintBottom_toTopOf="@+id/spMeses"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spMeses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMes"
                app:layout_constraintBottom_toTopOf="@id/tvGrupo"
                android:entries="@array/spMeses"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGrupo"
                android:textColor="@color/negro"
                android:text="@string/strEstableceContrasena"
                app:layout_constraintTop_toBottomOf="@+id/spMeses"
                app:layout_constraintBottom_toTopOf="@+id/spGrupos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
            </TextView>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spGrupos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGrupo"
                app:layout_constraintBottom_toTopOf="@id/btnConfirmar"
                android:entries="@array/spGrupos"
                />


            <Button
                android:id="@+id/btnConfirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/amarillo"
                android:onClick="insertarDatos"
                android:text="@string/strConfirmar"
                android:textColor="@color/moradoOscuro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spGrupos" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>